[package]
name = "json_logs_diff"
version = "0.1.0"
authors = ["Adria Massanet <adria@codecontext.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
serde = { version = "1.0", features=["derive"]}
serde_json = "1.0" 
tabular = "0.1.4"